--- a/Abodit.Graph/Abodit.Graph.csproj
+++ b/Abodit.Graph/Abodit.Graph.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net5.0</TargetFramework>
+    <TargetFrameworks>net5.0;netstandard2.0;netstandard2.1;</TargetFrameworks>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <Authors>Ian Mercer</Authors>
     <Company>Signswift LLC</Company>
